<resources>
    <string name="app_name">TaskManager2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>

    <string name="text_view_create_account">dont have an account? create one</string>
    <string name="layout_tab_todo">TODO</string>
    <string name="layout_tab_doing">DOING</string>
    <string name="layout_tab_done">DONE</string>
    <string name="text_view_empty_add">there is no task .for add task click on floating add button
    </string>
    <string name="snackbar_invalid_username_or_password">username or password is invalid</string>
    <string name="snackbar_not_exits_user">you have not account.please sign up first</string>
    <string name="snackbar_empty_username_or_password">username or password is empty!!</string>
    <string name="snackbar_user_find">welcome</string>
    <string name="snackbar_not_exits_any_user">Not exits any user</string>
    <string name="snackbar_not_exits_any_task">Not exits any task</string>

    <string name="snackbar_is_taken_username_or_password">username or password is taken !!! try another
    </string>
    <string name="snackbar_username_or_password_is_empty">username or password con not be empty!!</string>

    <string name="snackbar_enter_admin_password">enter the admin password</string>


    <string name="menu_log_out">Logout</string>
    <string name="menu_delete_all_tasks">Delete all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="task_report">Task title is : * %1$s *
     task description is :* %2$s *
    task date is : * %3$s *
    task state is : * %4$s *</string>
    <string name="send_task">Send task</string>


</resources>