<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_task_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_tab_todo"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_doing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_tab_doing"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_tab_done"
            />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2_task_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout_task_list"
        />

</RelativeLayout>