<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_sing_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controller.fragment.SignInFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_view_empty_add"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:focusable="auto"
        android:scaleType="centerCrop"
        android:src="@mipmap/layer_task_manager" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textColor="@color/black_00" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/black_00" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sing_in"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_in" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingBottom="15dp"
                app:boxBackgroundColor="#292626"
                app:prefixTextColor="#534D4D">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_view_create_account"
                    android:textColor="@color/black_00"
                    android:textSize="18sp"
                    app:fontFamily="sans-serif-condensed-light" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_35"
                android:text="@string/button_sign_up"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>



